--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.5.6",
     "nodemailer": "^7.0.9",
     "react": "19.1.0",
+    "react-compare-image": "^3.5.10",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
